# Novara

./: .gitignore  .weblate  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  README.zh.md  README_en.md  build.gradle  commit_msg.txt  error_log.txt  gradle.properties  package-lock.json  package.json  settings.gradle  test_haze.kts
.claude/: settings.local.json
.github/: ISSUE_TEMPLATE.md  RELEASE_GUIDE.md
app/: build.gradle  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  fix_shaders.py  realcugan.cpp  realcugan_jni.cpp  realcugan_postproc.comp  realcugan_postproc.comp.hex.h  realcugan_postproc_tta.comp  realcugan_postproc_tta.comp.hex.h  realcugan_preproc.comp.hex.h  realcugan_preproc_tta.comp.hex.h  realesrgan.cpp  realesrgan_jni.cpp  realesrgan_postproc.comp  realesrgan_postproc.comp.hex.h  realesrgan_postproc_fp16a.comp.hex.h  realesrgan_postproc_fp16s.comp.hex.h  realesrgan_postproc_int8s.comp.hex.h  realesrgan_postproc_tta.comp  realesrgan_postproc_tta.comp.hex.h  realesrgan_postproc_tta_fp16a.comp.hex.h  realesrgan_postproc_tta_fp16s.comp.hex.h  realesrgan_postproc_tta_int8s.comp.hex.h  realesrgan_preproc.comp  realesrgan_preproc.comp.hex.h  realesrgan_preproc_fp16a.comp.hex.h  realesrgan_preproc_fp16s.comp.hex.h  realesrgan_preproc_int8s.comp.hex.h  realesrgan_preproc_tta.comp  realesrgan_preproc_tta.comp.hex.h  realesrgan_preproc_tta_fp16a.comp.hex.h  realesrgan_preproc_tta_fp16s.comp.hex.h  realesrgan_preproc_tta_int8s.comp.hex.h
ci/: trigger-build.txt
cloudstream-runtime/: build.gradle
docs/: KotatsuRedoIntegration.md  README.md  (+17 more)
(+2884 files in other folders)
